# MTRX3760-Project-1

./: README.md
install/: local_setup.sh  setup.sh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node  read_write_node.py
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_description/share/turtlebot3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_example/share/turtlebot3_example/: package.sh  package.xml
install/turtlebot3_fake_node/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_gazebo/include/turtlebot3_gazebo/: obstacle1.hpp  obstacle2.hpp  obstacles.hpp  (+3 more)
log/: latest_build
turtlebot3_ws/: .gitignore
turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/include/turtlebot3_gazebo/: robot_state.hpp  sensor_data.hpp  turtlebot3_camera.hpp  turtlebot3_drive.hpp  turtlebot3_pose_trajectory.hpp  utilities.hpp  wall_follower_config.hpp  wall_follower_state_machine.hpp
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: closedmaze.launch.py  full_launch.py  openmaze.launch.py  slam.launch.py  turtlebot3_dqn_stage1_custom.launch.py
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_closedmaze/: model.config  model.sdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_closedmaze/meshes/: ClosedMaze.mtl
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_openmaze/: model.config  model.sdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_openmaze/meshes/: OpenMaze.mtl
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/rviz/: tb3_cartographer.rviz
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/src/: turtlebot3_camera.cpp  turtlebot3_drive.cpp  turtlebot3_pose_trajectory.cpp  wall_follower_state_machine.cpp
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: closedmaze.sdf  openmaze.sdf
(+959 files in other folders)
